--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,18544],[],[[4,0,0,[],[1,221,2384],[[0,5,6,0,7,8,0,0,[1,222,2382],[[223,2,9]]]]],[10,0,0,[],[1,2605,15937],[[0,11,6,0,12,13,0,0,[1,2606,180],[[2606,2,14]]],[0,11,6,0,12,15,0,0,[1,2786,169],[[2786,2,16]]],[0,11,6,0,12,17,0,0,[1,2955,223],[[2956,2,18]]],[0,19,6,0,20,21,0,0,[1,3178,158],[[3180,2,22]]],[0,19,6,0,20,23,0,0,[1,3337,77],[[3338,2,24]]],[0,25,26,0,27,28,0,0,[1,3415,10000],[[13415,2,29]]],[0,19,6,0,20,30,0,0,[1,13416,93],[[13416,2,31]]],[0,32,6,0,33,34,0,0,[1,13510,31],[[13541,2,35]]],[0,25,26,0,27,36,0,0,[1,13541,5000],[[18541,2,37]]]]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10169],[],[[4,0,0,[],[1,391,9775],[[1,5,6,0,0,0,0,0,[1,392,5663],[[0,7,8,0,9,10,0,0,[1,393,5660],[[393,2,11]]]]],[0,12,0,0,0,0,0,0,[1,6057,704],[[0,13,8,0,14,15,0,0,[1,6058,702],[[6059,2,16]]]]],[0,17,0,0,0,0,0,0,[1,6764,368],[[0,18,8,0,19,20,0,0,[1,6767,147],[[6914,2,21]]],[0,18,8,0,19,22,0,0,[1,6915,118],[[7032,2,23]]],[0,18,8,0,19,24,0,0,[1,7034,97],[[7130,2,25]]]]],[2,26,6,0,0,0,0,0,[1,7134,3032],[[0,27,8,0,28,0,0,0,[1,7136,3031],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\rafae\\OneDrive\\Área de Trabalho\\Curso-Robot\\primeiro_teste.robot","*primeiro_teste.robot","*Abrir navegador e acessar o site do organo","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*url=http://localhost:3000/    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*Preencher os campos do formulário","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:form-nome    Akemi","*Typing text 'Akemi' into text field 'id:form-nome'.","*id:form-cargo    Desenvolvedora","*Typing text 'Desenvolvedora' into text field 'id:form-cargo'.","*id:form-imagem    <a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>","*Typing text '<a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>' into text field 'id:form-imagem'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*class:lista-suspensa","*Clicking element 'class:lista-suspensa'.","*//option[contains(.,'Programação')]","*Clicking element '//option[contains(.,'Programação')]'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*10s","*Slept 10 seconds.","*id:form-botao","*Clicking element 'id:form-botao'.","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*class:colaborador","*Element 'class:colaborador' is displayed.","*5s","*Slept 5 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Preenchimento Incorreto","*C:\\Users\\rafae\\OneDrive\\Área de Trabalho\\Curso-Robot\\preenchimento_incorreto.robot","*preenchimento_incorreto.robot","*Verificar se quando um campo obrigatório não for preenchido corretamente o sistema exibe uma mensagem de campo obrigatório","*Dado que eu acesse o Organo","*setup_teardown","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*url=http://localhost:3000/    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*Dado que eu clique no botão &quot;Criar Card&quot;","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${BOTAO_CARD}","*Clicking element 'id:form-botao'.","*Então sistema deve apresentar mensagem de campo obrigatório","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*id:form-nome-erro","*Element 'id:form-nome-erro' is displayed.","*id:form-cargo-erro","*Element 'id:form-cargo-erro' is displayed.","*id:form-times-erro","*Element 'id:form-times-erro' is displayed.","*Fechar o navegador","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Preenchimento Incorreto","name":"Preenchimento Incorreto","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1745874549445;
+window.output["baseMillis"] = 1747009897050;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 18558;
+window.output["generated"] = 10185;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
